--- a/station-map-style.css
+++ b/station-map-style.css
@@ -6,6 +6,9 @@
 }
 .map_station_map_section {
   text-align: center;
+  position: sticky;
+  top: 20px;
+  z-index: 9999;
 }
 .map_station_map {
   height: 450px;
@@ -59,5 +62,9 @@
   }
   .map_station-itemicon {
     display: none;
+  }
+
+  .map_station_infos {
+    flex-direction: column;
   }
 }
